# league-of-legends-stats-bot

./: pyproject.toml  readME.md
aram_stats/: account.py  aggregate.py  champions.py  leaderboard.py  main.py  match.py  match_history.py
aram_stats/data/accounts/: Battleborn Kayle_champ_stats.xlsx  Call me Rose_champ_stats.xlsx  HeziK_champ_stats.xlsx  Highly Religious_champ_stats.xlsx  Hobo_champ_stats.xlsx  Junachina_champ_stats.xlsx  Lectric_champ_stats.xlsx  Mafla Jinx_champ_stats.xlsx  Magnifiko666_champ_stats.xlsx  Marlov7_champ_stats.xlsx  hypixel skywars_champ_stats.xlsx  leaderboard.csv
aram_stats/data/champs/: stats.csv
aram_stats/data/matches/: EUN1_2864714151.csv  EUN1_2864746462.csv  EUN1_2864768446.csv  EUN1_2864770161.csv  EUN1_2864783831.csv  EUN1_2864795477.csv  EUN1_2864802132.csv  EUN1_2864813185.csv  EUN1_2864838048.csv  EUN1_2864850171.csv  EUN1_2864874751.csv  EUN1_2864901683.csv  EUN1_2865012811.csv  EUN1_2865034858.csv  EUN1_2865057489.csv  EUN1_2865061976.csv  EUN1_2865079958.csv  EUN1_2865105696.csv  EUN1_2865168217.csv  EUN1_2865233091.csv  EUN1_2865244482.csv  EUN1_2865592065.csv  EUN1_2865767398.csv  EUN1_2865772223.csv  EUN1_2865775784.csv  EUN1_2865802429.csv  EUN1_2865814634.csv  EUN1_2865819196.csv  EUN1_2865924607.csv  EUN1_2865952374.csv  EUN1_2865958774.csv  EUN1_2865977372.csv  EUN1_2866182378.csv  EUN1_2866354443.csv  EUN1_2866366345.csv  EUN1_2866408564.csv  EUN1_2866483899.csv  (+2229 more)
discord bot/: account.py  config.py  constants.py  database.py  discord_bot - Copy.py  graphs.ipynb  main.py  match.py  match_history.py
