[tool.poetry]
name = "league of legends stats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.5.1"
flask-sqlalchemy = "^3.0.2"
ipykernel = "^6.16.1"
requests = "^2.28.1"
loguru = "^0.6.0"
Flask-RESTful = "^0.3.9"
altair = "^4.2.0"
altair-saver = "^0.5.0"
discord = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
